--- a/res/layout/home.xml
+++ b/res/layout/home.xml
@@ -3,8 +3,8 @@
                 android:orientation="vertical"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent">
-    <TextView android:text="Don't Panic" android:id="@+id/TextView01" android:paddingTop="10dp" android:paddingLeft="5dp"
-              android:layout_height="wrap_content" android:paddingBottom="10dp"
+    <TextView android:text="Don't Panic" android:paddingTop="10dp" android:paddingLeft="5dp"
+              android:layout_height="wrap_content" android:paddingBottom="10dp" android:textSize="18sp"
               android:layout_width="wrap_content">
     </TextView>
     <Button
