--- a/res/layout/country_listing.xml
+++ b/res/layout/country_listing.xml
@@ -8,6 +8,7 @@
               android:layout_width="fill_parent"/>
     <ListView
             android:id="@+id/country_list"
+            android:layout_marginTop="20dip"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
     </ListView>
