--- a/res/layout/country_listing.xml
+++ b/res/layout/country_listing.xml
@@ -1,24 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
+              android:layout_width="fill_parent"
+              android:layout_height="fill_parent"
+              android:weightSum="10"
               android:orientation="vertical">
-    <TextView android:text="@string/list_by"
-              android:layout_height="wrap_content"
-              android:layout_width="fill_parent"/>
     <ListView
             android:id="@+id/country_list"
             android:layout_marginTop="20dip"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_weight="9"
+            android:layout_height="0dip">
     </ListView>
 
     <Button
             android:id="@+id/synchronize"
-            android:layout_height="wrap_content"
+            android:layout_height="0dip"
             android:layout_width="fill_parent"
-            android:text="@string/view_all"
-            android:layout_margin="5dp"
+            android:text="@string/sync_all"
+            android:layout_weight="1"
             android:layout_alignParentBottom="true"/>
 
 </LinearLayout>
