--- a/res/layout/office_listing.xml
+++ b/res/layout/office_listing.xml
@@ -5,7 +5,7 @@
               android:weightSum="10"
               android:orientation="vertical">
     <TextView
-            android:id="@+id/country_name"
+            android:id="@+id/city_name"
             android:layout_width="fill_parent"
             android:layout_weight="1"
             android:layout_height="wrap_content"
