--- a/res/values-v14/styles.xml
+++ b/res/values-v14/styles.xml
@@ -1,5 +1,5 @@
 <resources>
-    <style name="MyTheme" parent="@android:style/Theme.DeviceDefault.Light">
+    <style name="MyTheme" parent="@android:style/Theme.Holo.Light">
 
     </style>
 </resources>
