--- a/res/layout/city_listing.xml
+++ b/res/layout/city_listing.xml
@@ -7,14 +7,16 @@
     <TextView
             android:id="@+id/country_name"
             android:layout_width="fill_parent"
-            android:layout_weight="1"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:gravity="center_horizontal"
             android:layout_height="wrap_content"
             />
     <ListView
             android:id="@+id/android:list"
             android:layout_marginTop="20dip"
             android:layout_width="match_parent"
-            android:layout_weight="19"
+            android:layout_weight="50"
             android:layout_height="0dip">
     </ListView>
 </LinearLayout>
