--- a/res/layout/office_listing.xml
+++ b/res/layout/office_listing.xml
@@ -7,14 +7,25 @@
     <TextView
             android:id="@+id/city_name"
             android:layout_width="fill_parent"
-            android:layout_weight="1"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:gravity="center_horizontal"
             android:layout_height="wrap_content"
             />
     <ListView
             android:id="@+id/android:list"
             android:layout_marginTop="20dip"
             android:layout_width="match_parent"
-            android:layout_weight="19"
+            android:layout_weight="50"
             android:layout_height="0dip">
     </ListView>
+    <LinearLayout android:id="@android:id/empty"
+                  android:layout_width="fill_parent" android:layout_height="fill_parent"
+                  android:gravity="center">
+
+        <TextView android:text="No Offices in the List"
+                  android:layout_width="wrap_content" android:layout_height="wrap_content">
+        </TextView>
+
+    </LinearLayout>
 </LinearLayout>
