--- a/res/layout/row_office.xml
+++ b/res/layout/row_office.xml
@@ -15,16 +15,26 @@
                 android:layout_height="wrap_content"
                 android:visibility="gone"
                 />
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/row_office_name"
-                />
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/row_company_name"
-                />
+        <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content">
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    android:padding="5sp"
+                    android:id="@+id/row_office_name"
+                    />
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:paddingLeft="5sp"
+                    android:id="@+id/row_company_name"
+                    />
 
+        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
