Added Action Bar

--- a/res/layout/home.xml
+++ b/res/layout/home.xml
@@ -3,10 +3,14 @@
                 android:orientation="vertical"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent">
-    <TextView android:text="Don't Panic" android:paddingTop="10dp" android:paddingLeft="5dp"
-              android:layout_height="wrap_content" android:paddingBottom="10dp" android:textSize="18sp"
-              android:layout_width="wrap_content">
-    </TextView>
+    <com.thoughtworks.widget.ActionBar
+            android:id="@+id/actionBar"
+            android:layout_width="fill_parent"
+            android:layout_height="45dip"
+            android:layout_weight="1"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"/>
+
     <Button
             android:id="@+id/view_all"
             android:layout_height="wrap_content"
