--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,4 +1,6 @@
 <resources>
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
+    <color name="actionbar_separator">#ffffff</color>
+    <color name="actionbar_title">#000000</color>
 </resources>
