--- a/res/layout/office_listing.xml
+++ b/res/layout/office_listing.xml
@@ -16,7 +16,8 @@
                   android:gravity="center">
 
         <TextView android:text="No Offices in the List"
-                  android:layout_width="wrap_content" android:layout_height="wrap_content">
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content">
         </TextView>
 
     </LinearLayout>
