--- a/res/layout/office_listing.xml
+++ b/res/layout/office_listing.xml
@@ -15,7 +15,8 @@
                   android:layout_width="fill_parent" android:layout_height="fill_parent"
                   android:gravity="center">
 
-        <TextView android:text="No Offices in the List"
+        <TextView android:text=""
+                  android:id="@+id/empty_text"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content">
         </TextView>
