--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -2,6 +2,9 @@
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
     <color name="dark_green">#ff164209</color>
+    <color name="grey">#ff999999</color>
+    <color name="blue_1">#449def</color>
+    <color name="blue_2">#2f6699</color>
     <color name="actionbar_separator">#ffffff</color>
     <color name="actionbar_title">#000000</color>
 </resources>
