--- a/res/drawable/actionbar_btn_pressed.xml
+++ b/res/drawable/actionbar_btn_pressed.xml
@@ -1,4 +1,4 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:shape="rectangle">
-    <solid android:color="@color/black"/>
+    <solid android:color="@color/blue_1"/>
 </shape>
