--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -6,4 +6,12 @@
         <item name="android:textAppearance">?android:attr/textAppearanceMedium</item>
         <item name="android:textColor">@color/black</item>
     </style>
+    <style name="ButtonText" parent="@android:attr/buttonStyleSmall">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">#ffffff</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">16dip</item>
+    </style>
 </resources>
