--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -6,7 +6,7 @@
         <item name="android:textAppearance">?android:attr/textAppearanceMedium</item>
         <item name="android:textColor">@color/black</item>
     </style>
-    <style name="ButtonText" parent="@android:attr/buttonStyleSmall">
+    <style name="ButtonText" parent="@android:style/Widget.Button.Inset">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">#ffffff</item>
