--- a/res/layout/grid_item.xml
+++ b/res/layout/grid_item.xml
@@ -22,6 +22,7 @@
             android:text="TextView"
             android:textStyle="bold"
             android:paddingTop="5dp"
+            android:paddingBottom="5dp"
             android:gravity="center_horizontal"
             android:textColorHighlight="#656565">
     </TextView>
