--- a/res/layout/row_office.xml
+++ b/res/layout/row_office.xml
@@ -8,26 +8,51 @@
             android:id="@+id/row_office_name"
             android:layout_width="fill_parent"
             android:textStyle="bold"
-            android:textSize="20dip"
+            android:textSize="14dip"
             android:layout_height="wrap_content"
             />
     <TextView
             android:id="@+id/row_office_address"
             android:layout_width="fill_parent"
             android:layout_weight="1"
+            android:textSize="12dip"
             android:layout_height="wrap_content"
-            android:visibility="gone"
             />
-
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/row_office_phone"
-            />
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/row_office_email"
-            />
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                  android:layout_width="fill_parent"
+                  android:layout_height="wrap_content"
+                  android:padding="2dip"
+                  android:orientation="horizontal">
+        <ImageView android:id="@+id/off_phone_icon"
+                   android:layout_alignParentLeft="true" android:layout_width="wrap_content"
+                   android:layout_height="fill_parent" android:background="@drawable/phone"
+                   android:padding="0dip"/>
+        <TextView
+                android:layout_toRightOf="@id/off_phone_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/row_office_phone"
+                android:textSize="10dip"
+                android:autoLink="all"
+                />
+    </LinearLayout>
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                  android:layout_width="fill_parent"
+                  android:layout_height="wrap_content"
+                  android:padding="2dip"
+                  android:orientation="horizontal">
+        <ImageView android:id="@+id/off_mail_icon"
+                   android:layout_alignParentLeft="true" android:layout_width="wrap_content"
+                   android:layout_height="fill_parent" android:background="@drawable/mail"
+                   android:padding="0dip"/>
+        <TextView
+                android:layout_toRightOf="@id/off_mail_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/row_office_email"
+                android:textSize="10dip"
+                android:autoLink="all"
+                />
+    </LinearLayout>
 
 </LinearLayout>
