--- a/res/layout/nodata.xml
+++ b/res/layout/nodata.xml
@@ -21,6 +21,7 @@
                   android:lineSpacingMultiplier="2"
                   android:textColor="@color/grey"
                   android:layout_gravity="center"
+                  android:gravity="center"
                   android:text="Please sync (top-right button) data before proceeding."/>
     </LinearLayout>
 </LinearLayout>
