--- a/res/layout/row_admin.xml
+++ b/res/layout/row_admin.xml
@@ -4,28 +4,49 @@
               android:layout_height="wrap_content"
               android:orientation="vertical"
               android:padding="6dip">
+    <TextView
+            android:id="@+id/row_admin_name"
+            android:layout_width="wrap_content"
+            android:textStyle="bold"
+            android:textSize="18dip"
+            android:padding="4dip"
+            android:layout_height="wrap_content"
+            />
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                   android:layout_width="fill_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
-                  android:padding="6dip">
-        <TextView
-                android:id="@+id/row_admin_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                />
+                  android:padding="2dip">
+        <ImageView android:id="@+id/off_phone_icon"
+                   android:layout_alignParentLeft="true"
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:background="@drawable/phone"
+                   android:padding="0dip"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/row_admin_number"
-                android:layout_alignParentRight="true"
+                android:textSize="14dip"
                 android:autoLink="all"
                 />
     </LinearLayout>
-    <TextView
-            android:id="@+id/row_admin_email"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:autoLink="all"
-            />
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                  android:layout_width="fill_parent"
+                  android:layout_height="wrap_content"
+                  android:padding="2dip"
+                  android:orientation="horizontal">
+        <ImageView android:id="@+id/off_mail_icon"
+                   android:layout_alignParentLeft="true" android:layout_width="wrap_content"
+                   android:layout_height="wrap_content" android:background="@drawable/mail"
+                   android:padding="0dip"/>
+        <TextView
+                android:layout_toRightOf="@id/off_mail_icon"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/row_admin_email"
+                android:textSize="14dip"
+                android:autoLink="all"
+                />
+    </LinearLayout>
 </LinearLayout>
