--- a/res/layout/row_officeplace.xml
+++ b/res/layout/row_officeplace.xml
@@ -4,14 +4,31 @@
               android:layout_height="wrap_content"
               android:orientation="vertical"
               android:padding="6dip">
-    <TextView
-            android:id="@+id/row_office_name"
-            android:layout_width="fill_parent"
-            android:textStyle="bold"
-            android:textSize="18dip"
-            android:paddingBottom="4dip"
-            android:layout_height="wrap_content"
-            />
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                  android:layout_width="fill_parent"
+                  android:layout_height="wrap_content"
+                  android:orientation="horizontal">
+        <TextView
+                android:id="@+id/row_office_name"
+                android:layout_width="wrap_content"
+                android:textStyle="bold"
+                android:textSize="18dip"
+                android:paddingBottom="4dip"
+                android:layout_height="wrap_content"
+                />
+        <TextView
+                android:layout_toRightOf="@id/row_office_name"
+                android:id="@+id/row_office_map"
+                android:layout_width="wrap_content"
+                android:textStyle="bold"
+                android:textSize="17dip"
+                android:text="@string/view_map"
+                android:autoLink="web"
+                android:paddingLeft="6dip"
+                android:paddingBottom="4dip"
+                android:layout_height="wrap_content"
+                />
+    </LinearLayout>
     <TextView
             android:id="@+id/row_office_address"
             android:layout_width="fill_parent"
@@ -59,5 +76,4 @@
                 android:autoLink="all"
                 />
     </LinearLayout>
-
 </LinearLayout>
