--- a/res/layout/row_admin.xml
+++ b/res/layout/row_admin.xml
@@ -20,14 +20,14 @@
         <ImageView android:id="@+id/off_phone_icon"
                    android:layout_alignParentLeft="true"
                    android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:background="@drawable/phone"
-                   android:padding="0dip"/>
+                   android:layout_height="20dip"
+                   android:background="@drawable/phone"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/row_admin_number"
                 android:textSize="18dip"
+                android:paddingLeft="2dip"
                 android:autoLink="all"
                 />
     </LinearLayout>
@@ -38,14 +38,14 @@
                   android:orientation="horizontal">
         <ImageView android:id="@+id/off_mail_icon"
                    android:layout_alignParentLeft="true" android:layout_width="wrap_content"
-                   android:layout_height="wrap_content" android:background="@drawable/mail"
-                   android:padding="0dip"/>
+                   android:layout_height="20dip" android:background="@drawable/mail"/>
         <TextView
                 android:layout_toRightOf="@id/off_mail_icon"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/row_admin_email"
                 android:textSize="18dip"
+                android:paddingLeft="2dip"
                 android:paddingBottom="5dip"
                 android:autoLink="all"
                 />
