--- a/res/layout/row_officeplace.xml
+++ b/res/layout/row_officeplace.xml
@@ -46,13 +46,14 @@
                   android:orientation="horizontal">
         <ImageView android:id="@+id/off_phone_icon"
                    android:layout_alignParentLeft="true" android:layout_width="wrap_content"
-                   android:layout_height="wrap_content" android:background="@drawable/phone"
+                   android:layout_height="20dip" android:background="@drawable/phone"
                    android:padding="0dip"/>
         <TextView
                 android:layout_toRightOf="@id/off_phone_icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/row_office_phone"
+                android:paddingLeft="2dip"
                 android:textSize="16dip"
                 android:autoLink="all"
                 />
@@ -65,13 +66,14 @@
                   android:orientation="horizontal">
         <ImageView android:id="@+id/off_mail_icon"
                    android:layout_alignParentLeft="true" android:layout_width="wrap_content"
-                   android:layout_height="wrap_content" android:background="@drawable/mail"
+                   android:layout_height="20dip" android:background="@drawable/mail"
                    android:padding="0dip"/>
         <TextView
                 android:layout_toRightOf="@id/off_mail_icon"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/row_office_email"
+                android:paddingLeft="2dip"
                 android:textSize="16dip"
                 android:autoLink="all"
                 />
